metadata/force-app/main/default/objects/CustomName_VHeyp__c/CustomName_VHeyp__c.object-meta.xml
<CustomObject>
    <description>Description_xfliw</description>
    <label>CustomLabel_pAxiB</label>
    <nameField>
        <label>CustomLabel_pAxiB</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_pAxiBs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>