metadata/force-app/main/default/objects/CustomName_VHeyp__c/fields/CustomField_kmEay__c.field-meta.xml
<CustomField>
    <fullName>CustomField_kmEay__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldYMpNx</label>
    <length>255</length>
    <type>Text</type>
</CustomField>