metadata/force-app/main/default/objects/CustomName_VHeyp__c/fields/CustomField_wXDAc__c.field-meta.xml
<CustomField>
    <fullName>CustomField_wXDAc__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldWcpLj</label>
    <length>255</length>
    <type>Text</type>
</CustomField>