metadata/force-app/main/default/objects/CustomName_VHeyp__c/fields/CustomField_wZjrF__c.field-meta.xml
<CustomField>
    <fullName>CustomField_wZjrF__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldLBPPh</label>
    <length>255</length>
    <type>Text</type>
</CustomField>